--- a/src/prop.properties
+++ b/src/prop.properties
@@ -1,2 +1,2 @@
-path=C:\\Dicom Inbox\\GUZ REPUBLIC ONKODISPANSER, UFA\\1345\\CT_20130620_123114\\123114
-dst=ServerWl@ServerWl:4006
+path=F:\\DICOM Images\\CPS\\A\\C
+dst=ServerWl@195.208.184.124:4006
