--- a/src/prop.properties
+++ b/src/prop.properties
@@ -1,2 +1,2 @@
-path=F:\\DICOM Images\\Old\\Medincenter\\1.2.392.200036.9116.7.8.6.15603856.5.0.2692304862883705
-dst=STORESCP@195.208.184.124:1112
+path=/Dicom Inbox/Republican oncology center/505/MR_20121221_142021/142021
+dst=DCMQRSCPLpu1@localhost\:104
