--- a/src/prop.properties
+++ b/src/prop.properties
@@ -1,2 +1,2 @@
-path=/Dicom Inbox/Republican oncology center/505/MR_20121221_142021/142021
-dst=DCMQRSCPLpu1@localhost\:104
+path=/tmp/1.dcm
+dst=STORESCP@localhost\:104
