--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -6,12 +6,12 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.conversionPattern=%d{ABSOLUTE} %5p %t %c{1}:%M:%L - %m%n
 
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.file=myproject.log
+log4j.appender.file.file=JStoreScu.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.conversionPattern=%d{ABSOLUTE} %5p %t %c{1}:%M:%L - %m%n
 
 log4j.appender.debugfile=org.apache.log4j.FileAppender
-log4j.appender.debugfile.file=myproject-debug.log
+log4j.appender.debugfile.file=JStoreScu-debug.log
 log4j.appender.debugfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.debugfile.layout.conversionPattern=%d{ABSOLUTE} %5p %t %c{1}:%M:%L - %m%n
 log4j.logger.com.my.app.somepackage=DEBUG, debugfile
